More gene path things

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -708,9 +708,6 @@
 	trait_tec_gene_genius_t3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
 	trait_tec_gene_genius_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-	#leader_trait_tec_gene_research:0 ""
-	#leader_trait_tec_gene_research_desc:0 "§L.§!"
-
 	# Unity
 	trait_tec_gene_will_t1:0 "§YResolved§! (§GI§!)"
 	trait_tec_gene_will_t1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
@@ -724,9 +721,6 @@
 	trait_tec_gene_will_t3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
 	trait_tec_gene_will_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-	#leader_trait_tec_gene_will:0 ""
-	#leader_trait_tec_gene_will_desc:0 "§L.§!"
-
 	trait_tec_gene_fertile_t1:0 "§YFecund§! (§GI§!)"
 	trait_tec_gene_fertile_t1_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
 	trait_tec_gene_fertile_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
@@ -738,9 +732,6 @@
 	trait_tec_gene_fertile_t3:0 "§YFecund§! (§HIII§!)"
 	trait_tec_gene_fertile_t3_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
 	trait_tec_gene_fertile_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
-
-	#leader_trait_tec_gene_fertile:0 ""
-	#leader_trait_tec_gene_fertile_desc:0 "§L.§!"
 
 	trait_tec_gene_robust_t1:0 "§YImpervious§! (§GI§!)"
 	trait_tec_gene_robust_t1_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
@@ -766,124 +757,124 @@
 	trait_tec_gene_audacious_t3_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
 	trait_tec_gene_audacious_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 	# Lifespan
-	trait_tec_gene_lifespan_t1:0 "TODO ASCENSION"
-	trait_tec_gene_lifespan_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t1:0 "§YEternal§! (§GI§!)"
+	trait_tec_gene_lifespan_t1_desc:0 "§LThis organic species seems impervious to the pasage of time, literally not aging nor deteriorating due to age related illnesses or processes.§!"
 	trait_tec_gene_lifespan_t1_effect:0 "TODO ASCENSION"
 
-	trait_tec_gene_lifespan_t2:0 "TODO ASCENSION"
-	trait_tec_gene_lifespan_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t2:0 "§YEternal§! (§YII§!)"
+	trait_tec_gene_lifespan_t2_desc:0 "$trait_tec_gene_lifespan_t1_desc$"
 	trait_tec_gene_lifespan_t2_effect:0 "TODO ASCENSION"
 
-	trait_tec_gene_lifespan_t3:0 "TODO ASCENSION"
-	trait_tec_gene_lifespan_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t3:0 "§YEternal§! (§HIII§!)"
+	trait_tec_gene_lifespan_t3_desc:0 "$trait_tec_gene_lifespan_t1_desc$"
 	trait_tec_gene_lifespan_t3_effect:0 "TODO ASCENSION"
 	# Metabolic
-	trait_tec_gene_metabolic_t1:0 "TODO ASCENSION"
-	trait_tec_gene_metabolic_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t1:0 "§YEnhanced Metabolism§! (§GI§!)"
+	trait_tec_gene_metabolic_t1_desc:0 "§LAll the body functions of this speceis have been tweaked to the maximum exponent, generating hyper efficient and streamlined metabolic processes.§!"
 	trait_tec_gene_metabolic_t1_effect:0 "TODO ASCENSION"
 
-	trait_tec_gene_metabolic_t2:0 "TODO ASCENSION"
-	trait_tec_gene_metabolic_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t2:0 "§YEnhanced Metabolism§! (§YII§!)"
+	trait_tec_gene_metabolic_t2_desc:0 "$trait_tec_gene_metabolic_t1_desc$"
 	trait_tec_gene_metabolic_t2_effect:0 "TODO ASCENSION"
 
-	trait_tec_gene_metabolic_t3:0 "TODO ASCENSION"
-	trait_tec_gene_metabolic_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t3:0 "§YEnhanced Metabolism§! (§HIII§!)"
+	trait_tec_gene_metabolic_t3_desc:0 "$trait_tec_gene_metabolic_t1_desc$"
 	trait_tec_gene_metabolic_t3_effect:0 "TODO ASCENSION"
 	# Energy
 	trait_tec_gene_energy_t1:0 "§YTailored Wit§! (§HI§!)"
-	trait_tec_gene_energy_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t1_desc:0 "§LA really impressive wit drives this species towards the best technical processes regarding generation and maintenance of energy processes.§!"
 	trait_tec_gene_energy_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_energy_t2:0 "§YRecombined Wit§! (§HII§!)"
-	trait_tec_gene_energy_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t2_desc:0 "$trait_tec_gene_energy_t1_desc$"
 	trait_tec_gene_energy_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_energy_t3:0 "§YPerfected Wit§! (§HIII§!)"
-	trait_tec_gene_energy_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t3_desc:0 "$trait_tec_gene_energy_t1_desc$"
 	trait_tec_gene_energy_t3_effect:0 "TODO ASCENSION"
 	# Mining
 	trait_tec_gene_mining_t1:0 "§YTailored Mining§! (§HI§!)"
-	trait_tec_gene_mining_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t1_desc:0 "§LThis species is instinctively driven towards the best mineral deposits, as they have been genetically altered to do so.§!"
 	trait_tec_gene_mining_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_mining_t2:0 "§YRecombined Mining§! (§HII§!)"
-	trait_tec_gene_mining_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t2_desc:0 "$trait_tec_gene_mining_t1_desc$"
 	trait_tec_gene_mining_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_mining_t3:0 "§YPerfected Mining§! (§HIII§!)"
-	trait_tec_gene_mining_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t3_desc:0 "$trait_tec_gene_mining_t1_desc$"
 	trait_tec_gene_mining_t3_effect:0 "TODO ASCENSION"
 	# Food
 	trait_tec_gene_farming_t1:0 "§YTailored Cultivation§! (§HI§!)"
-	trait_tec_gene_farming_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t1_desc:0 "§LA natural impulse to select the best crops, the best breeds and best ecological niches has been implanted in this species, making them excellent agro-producers.§!"
 	trait_tec_gene_farming_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_farming_t2:0 "§YRecombined Cultivation§! (§HII§!)"
-	trait_tec_gene_farming_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t2_desc:0 "$trait_tec_gene_farming_t1_desc$"
 	trait_tec_gene_farming_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_farming_t3:0 "§YPerfected Cultivation§! (§HII§!)"
-	trait_tec_gene_farming_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t3_desc:0 "$trait_tec_gene_farming_t1_desc$"
 	trait_tec_gene_farming_t3_effect:0 "TODO ASCENSION"
 	# Industry
 	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§HI§!)"
-	trait_tec_gene_industry_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t1_desc:0 "§LLiving amongst industrial fumes, able to breathe and recycle polluted air and widthstand any toxing and odd condition, this species thrive at industrial production and meticulous design of advanced elements.§!"
 	trait_tec_gene_industry_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§HII§!)"
-	trait_tec_gene_industry_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t2_desc:0 "$trait_tec_gene_industry_t1_desc$"
 	trait_tec_gene_industry_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_industry_t3:0 "§YPerfected Manufacturing§! (§HIII§!)"
-	trait_tec_gene_industry_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t3_desc:0 "$trait_tec_gene_industry_t1_desc$"
 	trait_tec_gene_industry_t3_effect:0 "TODO ASCENSION"
 	# Research
 	trait_tec_gene_research_t1:0 "§YTailored Intellect§! (§HI§!)"
-	trait_tec_gene_research_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t1_desc:0 "§LA sharp ingenius paired with a ever expanded creativity drive this species forward.§!"
 	trait_tec_gene_research_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_research_t2:0 "§YRecombined Intellect§! (§HII§!)"
-	trait_tec_gene_research_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t2_desc:0 "$trait_tec_gene_research_t1_desc$"
 	trait_tec_gene_research_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_research_t3:0 "§YPerfected Intellect§! (§HIII§!)"
-	trait_tec_gene_research_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t3_desc:0 "$trait_tec_gene_research_t1_desc$"
 	trait_tec_gene_research_t3_effect:0 "TODO ASCENSION"
 	# Unity
 	trait_tec_gene_unity_t1:0 "§YTailored Harmony§! (§HI§!)"
-	trait_tec_gene_unity_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t1_desc:0 "§LThis species has an ingrained cultural sense that drive them towards harmonius sharing of thoughts and creativity.§!"
 	trait_tec_gene_unity_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_unity_t2:0 "§YRecombined Harmony§! (§HII§!)"
-	trait_tec_gene_unity_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t2_desc:0 "$trait_tec_gene_unity_t1_desc$"
 	trait_tec_gene_unity_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_unity_t3:0 "§YPerfected Harmony§! (§HIII§!)"
-	trait_tec_gene_unity_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t3_desc:0 "$trait_tec_gene_unity_t1_desc$"
 	trait_tec_gene_unity_t3_effect:0 "TODO ASCENSION"
 	# Amenities
 	trait_tec_gene_amenities_t1:0 "§YTailored Caretaking§! (§HI§!)"
-	trait_tec_gene_amenities_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t1_desc:0 "§LExcelling at the creation of maintenance, entertainment and sustainability elements, this species thrive when it comes to keeping their society afloat.§!"
 	trait_tec_gene_amenities_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_amenities_t2:0 "§YRecombined Caretaking§! (§HII§!)"
-	trait_tec_gene_amenities_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t2_desc:0 "$trait_tec_gene_amenities_t1_desc$"
 	trait_tec_gene_amenities_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_amenities_t3:0 "§YPerfected Caretaking§! (§HIII§!)"
-	trait_tec_gene_amenities_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t3_desc:0 "$trait_tec_gene_amenities_t1_desc$"
 	trait_tec_gene_amenities_t3_effect:0 "TODO ASCENSION"
 	# Trade
 	trait_tec_gene_trade_t1:0 "§YTailored Numeracy§! (§HI§!)"
-	trait_tec_gene_trade_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t1_desc:0 "§LIntrincate calculations cross the mind of this species, allowing them to fulfill highly complex mathematical processes, specially the ones related to riches and economical development.§!"
 	trait_tec_gene_trade_t1_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_trade_t2:0 "§YRecombined Numeracy§! (§HII§!)"
-	trait_tec_gene_trade_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t2_desc:0 "$trait_tec_gene_trade_t1_desc$"
 	trait_tec_gene_trade_t2_effect:0 "TODO ASCENSION"
 
 	trait_tec_gene_trade_t3:0 "§YPerfected Numeracy§! (§HIII§!)"
-	trait_tec_gene_trade_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t3_desc:0 "$trait_tec_gene_trade_t1_desc$"
 	trait_tec_gene_trade_t3_effect:0 "TODO ASCENSION"
  # /
  # Resequenced
@@ -910,6 +901,28 @@
 
 	#trait_tec_gene_resequenced_
  # /
+ # Leader traits
+	# Note: Everyone
+	leader_trait_tec_gene_genius:0 "§YGenius§!"
+	leader_trait_tec_gene_genius_desc:0 "§LThis leader has a unparalleled intellect and mental prowess, improving their abilities and the performance of its tasks at extreme efficiency.§!"
+
+	# Note: Everyone
+	leader_trait_tec_gene_will:0 "§YResolved§!"
+	leader_trait_tec_gene_will_desc:0 "§LThe capacity of endure and thrive in any situation with extreme dexterity is a capacity this ruler has been gene-edited with, greatly improving its skills.§!"
+
+	# Note: Ruler - Official
+	leader_trait_tec_gene_fertile:0 "§YFertile§!"
+	leader_trait_tec_gene_fertile_desc:0 "§LFocused on fertility and population growth, this leader ensures the prosperity of its species.§!"
+
+	# Note: Official - Commander
+	leader_trait_tec_gene_robust:0 "§YRobust§!"
+	leader_trait_tec_gene_robust_desc:0 "§LNear immortal to wounds,, illness or any natural cause, this leader effectuates its duty in the same way; preserving everything, anything, forever via minimization of possible losses and maximization of potential outcomes.§!"
+
+	# Note: Official - Commander
+	leader_trait_tec_gene_audacious:0 "§YAudacious§!"
+	leader_trait_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this leader command its kind in the same way; in an aggressive and effective way, minimizing time in battle while maximizing the damage done to the enemy, in all fields.§!"
+
+ # /
 
  # Old traits
 		#trait_pc_tec_gene_preference
@@ -921,16 +934,10 @@
 		trait_tec_gene_brain:0 "Genius"
 		trait_tec_gene_brain_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
 		TRAIT_TEC_GENE_BRAIN_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
-		# Note: everyone
-		leader_trait_tec_gene_brain:0 "$trait_tec_gene_brain$"
-		leader_trait_tec_gene_brain_desc:0 "§LThis leader has a unparalleled intellect and mental prowess, improving their abilities and the performance of its tasks at extreme efficiency.§!"
 
 		trait_tec_gene_fertile:0 "Fecund"
 		trait_tec_gene_fertile_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
 		TRAIT_TEC_GENE_FERTILE_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
-		# Note: Ruler - Official
-		leader_trait_tec_gene_fertile:0 "$trait_tec_gene_fertile$"
-		leader_trait_tec_gene_fertile_desc:0 "§LFocused on fertility and population growth, this leader ensures the prosperity of its species.§!"
 
 		trait_tec_gene_will:0 "Resolved"
 		trait_tec_gene_will_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
@@ -941,16 +948,10 @@
 		trait_tec_gene_robust:0 "Impervious"
 		trait_tec_gene_robust_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
 		TRAIT_TEC_GENE_ROBUST_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YGenerals§! of this species.§!"
-		# Note: Official - General - Admiral
-		leader_trait_tec_gene_robust:0 "$trait_tec_gene_robust$"
-		leader_trait_tec_gene_robust_desc:0 "§LNear immortal to wounds,, illness or any natural cause, this leader effectuates its duty in the same way; preserving everything, anything, forever via minimization of possible losses and maximization of potential outcomes.§!"
 
 		trait_tec_gene_audacious:0 "Audacious"
 		trait_tec_gene_audacious_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
 		TRAIT_TEC_GENE_AUDACIOUS_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YScientists§! of this species.§!"
-		# Note: Official - General - Admiral
-		leader_trait_tec_gene_audacious:0 "$trait_tec_gene_audacious$"
-		leader_trait_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this leader command its kind in the same way; in an aggressive and effective way, minimizing time in battle while maximizing the damage done to the enemy, in all fields.§!"
  # /
 # /
 
