--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -815,10 +815,10 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	decision_tec_genetic_recombination:0 "Start Recombination"
 	decision_tec_genetic_recombination_desc:0 "Local genetic facilities are prepared to start the reanalysis of potential genetic traits, allowing the enhancement of our species as a whole."
-	decision_tec_genetic_recombination_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_genetic_recombination$§! is taking place."
+	decision_tec_genetic_recombination_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation is taking place."
 	decision_tec_genetic_recombination_require_genetic_archives:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_genetic_archive$§!."
 	decision_tec_genetic_recombination_require_genetic_repositories:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_biohive_genetic_archive$§!."
-	decision_tec_genetic_recombination_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§!, allowing the upgrade of genetic perfected traits."
+	decision_tec_genetic_recombination_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation, allowing the upgrade of genetic perfected traits."
 
  # /
 # /
