gene traits loc fix

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -733,7 +733,7 @@
 
 	trait_tec_gene_fertile_t3:0 "§YFecund§! (§HIII§!)"
 	trait_tec_gene_fertile_t3_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
-	trait_tec_gene_fertile_t3_effect:0 "$mod_pop_housing_usage_mult$: §G-15%§!\n$mod_pop_growth_speed$: §G+30%§!\n$mod_planet_pop_assembly_organic_mult$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_fertile_t3_effect:0 "$MOD_POP_HOUSING_USAGE_MULT$: §G-15%§!\n$MOD_POP_GROWTH_SPEED$: §G+30%§!\n$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_robust_t1:0 "§YImpervious§! (§GI§!)"
 	trait_tec_gene_robust_t1_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
@@ -821,11 +821,11 @@
 	# Industry
 	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§HI§!)"
 	trait_tec_gene_industry_t1_desc:0 "§LLiving amongst industrial fumes, able to breathe and recycle polluted air and widthstand any toxing and odd condition, this species thrive at industrial production and meticulous design of advanced elements.§!"
-	trait_tec_gene_industry_t1_effect:0 ""
+	trait_tec_gene_industry_t1_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+12.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+12.5%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 
 	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§HII§!)"
 	trait_tec_gene_industry_t2_desc:0 "$trait_tec_gene_industry_t1_desc$"
-	trait_tec_gene_industry_t2_effect:0 ""
+	trait_tec_gene_industry_t2_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+17.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+17.5%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 
 	trait_tec_gene_industry_t3:0 "§YPerfected Manufacturing§! (§HIII§!)"
 	trait_tec_gene_industry_t3_desc:0 "$trait_tec_gene_industry_t1_desc$"
