loc and recombination fixes

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -653,6 +653,10 @@
 	tec_genetic_trait_t2:0 "§HEnhanced Genetic Trait§!"
 	tec_genetic_trait_t3:0 "§HPerfected Genetic Trait§!"
 
+	trait_tec_gene_allows_tailored_traits:0 "Allows the modification of Tailored Traits"
+	trait_tec_gene_allows_recombined_traits:0 "Allows the modification of Tailored and §YRecombined§! Traits"
+	trait_tec_gene_allows_perfected_traits:0 "Allows the modification of Tailored, §YRecombined§! and §HPerfected§! Traits"
+
 	trait_tec_gene_perfected_scaling:0 "Main effects are increased by §Y10§!% for every §HPerfected trait§!"
  # /
  # Main
@@ -661,15 +665,15 @@
 
 	trait_tec_gene_main_t1:0 "§YTailored Genetics§! (§GI§!)"
 	trait_tec_gene_main_t1_desc:0 "§LThis species is aspiring to create a perfectly tailored and maintained genetic code, which may allow it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	trait_tec_gene_main_t1_effect:0 "$todo_ascension$\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_main_t1_effect:0 "$trait_tec_gene_allows_tailored_traits$"
 
 	trait_tec_gene_main_t2:0 "§YRecombined Genetics§! (§YII§!)"
 	trait_tec_gene_main_t2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	trait_tec_gene_main_2_effect:0 "$todo_ascension$\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_main_2_effect:0 "$trait_tec_gene_allows_recombined_traits$"
 
 	trait_tec_gene_main_t3:0 "§YGenetic Perfection§! (§HIII§!)"
 	trait_tec_gene_main_t3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	trait_tec_gene_main_3_effect:0 "$todo_ascension$\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_main_3_effect:0 "$trait_tec_gene_allows_perfected_traits$"
 
 	trait_tec_gene_main_cloning_t1:0 "TODO ASCENSION"
 	trait_tec_gene_main_cloning_t1_desc:0 "§LTODO ASCENSION§!"
