--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -768,28 +768,32 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	# Jobs working her
 	building_tec_regular_genetic_archive:0 "Genetic Archive"
 	building_tec_regular_genetic_archive_plural:0 "$building_tec_regular_genetic_archive$s"
-	building_tec_regular_genetic_archive_desc:0 "TO DO"
+	building_tec_regular_genetic_archive_desc:0 "A monumental lab serving as repository of every genetic strain found in the empire. Past, present and future developments in genetics will be done here, as so the perfection of our species."
 	building_tec_regular_genetic_archive_effect:0 "This £building£ "
 	building_tec_regular_genetic_archive_effect_situation:0 "This £building£ "
 
 	building_tec_biohive_genetic_archive:0 "Genetic Repository"
 	building_tec_biohive_genetic_archive_plural:0 "Genetic Repositories"
-	building_tec_biohive_genetic_archive_desc:0 "TO DO"
+	building_tec_biohive_genetic_archive_desc:0 "A monumental growth serving as repository of every genetic strain found in the empire. Past, present and future developments in genetics will be done here, as so the perfection of our species."
 
-	building_tec_genetic_archive_allow_recombination:0 "\n§EFeature:§! §H£tec_genetics_icon£ Local Recombination§!\n- Allows the use of the §Y£stability£ $decision_tec_genetic_recombination$§! on this colony.\n"
+	building_tec_genetic_archive_allow_recombination:0 "§EFeature:§! §H£tec_genetics_icon£ Local Recombination§!\n- Allows the use of the §Y£stability£ $decision_tec_genetic_recombination$§! on this colony.\n"
+
+	building_tec_genetic_archive_recombinator_output:0 "\n§EFeature:§! §HEnhancement Therapies§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_job_output$§!.\n\n"
+	building_tec_genetic_archive_recombinator_genemod:0 "\n§EFeature:§! §HStreamlined Modifications§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ reduce the cost of §Y$tec_loc_species_modification$§!.\n\n"
+	building_tec_genetic_archive_recombinator_growth:0 "\n§EFeature:§! §HPopulation Boosters§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_assembly$§!.\n\n"
 
 	job_tec_gene_recombinator:0 "Geno-Tailor"
 	job_tec_gene_recombinator_plural:0 "Geno-Tailors"
-	job_tec_gene_recombinator_desc:0 "TODO ASCENSION"
-	job_tec_gene_recombinator_effect_desc:0 "TODO ASCENSION"
+	job_tec_gene_recombinator_desc:0 "These skilled researchers are constantly trying to improve the genetic makeup of every citizen."
+	job_tec_gene_recombinator_effect_desc:0 "£job_tec_gene_recombinator£ $job_tec_gene_recombinator_plural$ turn §Y$tec_loc_cg$§! into §Y$tec_loc_society$§!, §Y$tec_loc_unity$§!, §YRecombination Efficiency§! and a secondary bonus based on the decisions of the empire."
 	mod_job_tec_gene_recombinator_add:0 "$job_tec_gene_recombinator$ Jobs"
 	mod_job_tec_gene_recombinator_per_pop:0 "§G+1§! $job_tec_gene_recombinator$ Job per $VALUE$ Pops"
 	mod_job_tec_gene_recombinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_add£ per $VALUE$ £pop£"
 
 	job_tec_gene_recombinator_drone:0 "Geno-Weaver"
 	job_tec_gene_recombinator_drone_plural:0 "Geno-Weavers"
-	job_tec_gene_recombinator_drone_desc:0 "TODO ASCENSION"
-	job_tec_gene_recombinator_drone_effect_desc:0 "TODO ASCENSION"
+	job_tec_gene_recombinator_drone_desc:0 "These specialized drones are constantly trying to improve the genetic makeup of every breed of the collective."
+	job_tec_gene_recombinator_drone_effect_desc:0 "£job_tec_gene_recombinator£ $job_tec_gene_recombinator_plural$ turn §Y$tec_loc_basic_resources$§! into §Y$tec_loc_society$§! and a secondary bonus based on the decisions of the empire."
 	mod_job_tec_gene_recombinator_drone_add:0 "$job_tec_gene_recombinator_drone$ Jobs"
 	mod_job_tec_gene_recombinator_drone_per_pop:0 "§G+1§! $job_tec_gene_recombinator_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_gene_recombinator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_drone_add£ per $VALUE$ £pop£"
@@ -819,6 +823,11 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	decision_tec_genetic_recombination_require_genetic_archives:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_genetic_archive$§!."
 	decision_tec_genetic_recombination_require_genetic_repositories:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_biohive_genetic_archive$§!."
 	decision_tec_genetic_recombination_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation, allowing the upgrade of genetic perfected traits."
+
+	modifier_tec_genetic_recombination_traits:0 "Recombined Traits"
+	modifier_tec_genetic_recombination_traits_desc:0 "The total amount of recombined trait points obtained via genetic recombination"
+	modifier_tec_genetic_recombination_picks:0 "Recombined Picks"
+	modifier_tec_genetic_recombination_picks_desc:0 "The total amount of recombined trait picks obtained via genetic recombination"
 
  # /
 # /
