--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -455,7 +455,7 @@
 	ap_tec_genetic_perfection_recombinator_decision:0 "[ap_tec_genetic_t2_recombinator_decision]"
 
 	ap_tec_genetic_perfection_recombinator_output:0 "\n\n$tec_loc_ap_u_feature$ §HEnhancement Therapies§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_job_output$§!."
-	ap_tec_genetic_perfection_recombinator_genemod:0 "\n\n$tec_loc_ap_u_feature$ §HStreamlined Modifications§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ reduce §Y$tec_loc_species_modification$§!."
+	ap_tec_genetic_perfection_recombinator_genemod:0 "\n\n$tec_loc_ap_u_feature$ §HStreamlined Modifications§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ reduce the cost of §Y$tec_loc_species_modification$§!."
 	ap_tec_genetic_perfection_recombinator_growth:0 "\n\n$tec_loc_ap_u_feature$ §HPopulation Boosters§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_assembly$§!."
 
  # ---- Requires
